refactor yaml
