# service-status-specs/src/main/resources/api-spec.yaml
@@ -162,7 +162,7 @@ paths:
       consumes:
         - application/json
       parameters:
-        - name: id
+        - name: idService
           in: path
           description: ID of the service
           required: true
@@ -189,7 +189,7 @@ paths:
       produces:
         - application/json
       parameters:
-        - name: id
+        - name: idService
           in: path
           description: ID of the service
           required: true
@@ -213,19 +213,19 @@ paths:
       consumes:
         - application/json
       parameters:
-        - name: incidentUpdate
+        - name: update
           in: body
           description: Incident update to be added to the incident
           required: true
-          schema: 
+          schema:
             $ref: '#/definitions/IncidentUpdate'
-        - name: id
+        - name: idService
           in: path
           description: ID of the service
           required: true
           type: string
           format: uuid
-        - name: incidentId
+        - name: idIncident
           in: path
           description: ID of the incident to update
           required: true
@@ -246,13 +246,13 @@ paths:
       produces:
         - application/json
       parameters:
-        - name: id
+        - name: idService
           in: path
           description: ID of the service
           required: true
           type: string
           format: uuid
-        - name: incidentId
+        - name: idIncident
           in: path
           description: ID of the incidents to get
           required: true
@@ -265,77 +265,6 @@ paths:
               $ref: '#/definitions/Incident'
         '404':
           description: Not found
-
-
-          #  '/services/{id}/maintenances':
-          #    post:
-          #      tags:
-          #        - Maintenance
-          #      summary: Add a schedule maintenance
-          #      operationId: newMaintenance
-          #      consumes:
-          #        - application/json
-          #      parameters:
-          #        - name: service
-          #          in: body
-          #          description: Maintenance object that needs to be added to the status page
-          #          required: true
-          #          schema:
-          #            $ref: '#/definitions/NewMaintenance'
-          #        - name: id
-          #          in: path
-          #          description: ID of service
-          #          required: true
-          #          type: string
-          #          format: uuid
-          #      responses:
-          #        '201':
-          #          description: Creation successful
-          #        '405':
-          #          description: Invalid input
-          #    get:
-          #      tags:
-          #        - Maintenance
-          #      summary: Get maintenance for a given service
-          #      operationId: getMaintenance
-          #      produces:
-          #        - application/json
-          #      parameters:
-          #        - name: state
-          #          in: query
-          #          description: status of the maintenances to fetch
-          #          type: string
-          #          enum:
-          #            - upcoming
-          #            - past
-          #      responses:
-          #        '200':
-          #          description: Return the list of maintenances for the given service
-          #          schema:
-          #            $ref: '#/definitions/Maintenance'
-          #  '/services/{id}/maintenances/{id}':
-          #    get:
-          #      tags:
-          #        - Maintenance
-          #      summary: Get details of a service
-          #      parameters:
-          #        - name: id
-          #          in: path
-          #          description: ID of service to update
-          #          required: true
-          #          type: string
-          #          format: uuid
-          #        - name: expand
-          #          in: query
-          #          description: Define if nested object of the service are included in the response
-          #          type: string
-          #          enum:
-          #            - status
-          #      responses:
-          #        '200':
-          #          description: Successful response
-          #          schema:
-          #            $ref: '#/definitions/Service'
 definitions:
   ApiValidationError:
     type: object
@@ -391,11 +320,13 @@ definitions:
     properties:
       title:
         type: string
-      incidentUpdate:
-        $ref: '#/definitions/IncidentUpdate'
+      type:
+        $ref: '#/definitions/IncidentType'
+      message:
+        type: string
     required:
       - title
-      - incidentUpdate
+      - type
   Incident:
     type: object
     properties:
@@ -403,17 +334,17 @@ definitions:
         type: string
       location:
         type: string
-      incidents:
+      updates:
         type: array
         items:
           $ref: '#/definitions/IncidentUpdate'
     required:
       - title
-      - incidents
+      - updates
   IncidentUpdate:
     type: object
     properties:
-      incidentType:
+      type:
         $ref: '#/definitions/IncidentType'
       message:
         type: string
@@ -421,7 +352,7 @@ definitions:
         type: string
         format: date-time
     required:
-      - incidentType
+      - type
   IncidentType:
     type: string
     enum:
@@ -451,7 +382,7 @@ definitions:
       httpStatus:
         type: integer
         format: int32
-      status:
+      state:
         type: string
         enum:
           - available
@@ -459,5 +390,5 @@ definitions:
           - down
     required:
       - httpStatus
-      - status
+      - state
 
